Created an image in python that creates random works in english, and used docker compose to also use that image. Finally added a script to upload those words to Logstash

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,18 @@ services:
       - elasticsearch
     restart: unless-stopped
 
+  word-generator:
+    container_name: word-generator
+    build:
+      context: ./word-generator
+    ports:
+      - 5000:5000
+    networks:
+      - elk
+    depends_on:
+      - logstash
+    restart: unless-stopped  
+
 networks:
   elk:
     driver: bridge
